Added Put and Delete Routes
