# controller/index.js
@@ -1,5 +1,6 @@
 const mongodb = require('../db/connect');
 const ObjectId = require('mongodb').ObjectId;
+const { check } = require('express-validator');
 
 const name = async(req, res) => {
     res.json('Hello');
@@ -28,6 +29,8 @@ const getMovieByID = async(req, res) => {
 }
 
 const postNewMovie = async(req, res) => {
+    try{
+
     const movie = {
         movie_id: req.body.movie_id,
         title: req.body.title,
@@ -35,15 +38,74 @@ const postNewMovie = async(req, res) => {
         plot: req.body.plot,
         length: req.body.length
       };
+      console.log(movie.movie_id);
+      //console.log(check(movie.movie_id, "Please enter a Movie ID").not().isEmpty().isLength({min:1, max:3}))
+      //Check if the entered info is valid
+      //check(movie.movie_id, "Please enter a Movie ID").not().isEmpty().isLength({min:1, max:3});
+      //check(movie.title, "Please enter a title").not().isEmpty();
+      //check(movie.rating, "Please enter a Movie Rating").not().isEmpty();
+      //check(movie.plot, "Please enter a Movie plot").not().isEmpty();
+      //check(movie.length, "Please enter a Movie length").not().isEmpty();
     
       const result = await mongodb.getDb().db('movies').collection('movie').insertOne(movie);
-    
+      //const result = await mongodb.getDb().db('movies').collection('movie').find();
+
       if (result.acknowledged) {
         res.status(202).json(result);
         console.log('The contact was successfully inserted!');
-      } else {
+      } 
+      else {
         res.status(500).json('The insert has failed.');
       }
+              
+    }
+    catch(err){
+        res.status(400).json(err.message);
+    }
 }
 
-module.exports = {getAllMovies, getMovieByID, postNewMovie};
+
+const deleteMovie = async (req, res) => {
+    const userIdString = new ObjectId(req.params.id);
+  
+    const result = await mongodb
+      .getDb()
+      .db('movies')
+      .collection('movie')
+      .deleteOne({ _id: userIdString });
+  
+    console.log(`Results Deleted: ${result.deletedCount} `);
+  
+    if (result.deletedCount > 0) {
+      res.status(204).send();
+      console.log('The contact was successfully deleted!');
+    } else {
+      res.status(404).json('The Delete has failed.');
+    }
+  };
+
+  const updateMovie = async (req, res) => {
+  const userIdString = new ObjectId(req.params.id);
+  const movie = {
+        movie_id: req.body.movie_id,
+        title: req.body.title,
+        rating: req.body.rating ,
+        plot: req.body.plot,
+        length: req.body.length
+      };
+
+  const result = await mongodb
+    .getDb()
+    .db('contactInfo')
+    .collection('contacts')
+    .updateOne({ _id: userIdString }, { $set: movie });
+
+  if (result.acknowledged) {
+    res.status(204).send();
+    console.log('The contact was successfully updated!');
+  } else {
+    res.status(404).json('The Update has failed.');
+  }
+};
+
+module.exports = {getAllMovies, getMovieByID, postNewMovie, deleteMovie, updateMovie};
